@@ -529,8 +529,20 @@ TertiaryDark: #666
 Error: #f88
 </pre>
 </div>
+<div title="DCPSInfoRepo" modifier="MikeMartinez" created="201003011936" changecount="1">
+<pre>This is the executable that manages metadata for OpenDDS.  This is where associations are made between publications and subscriptions.  Builtin Topics are distributed from here.  One process of this type is required for operaion of OpenDDS.  It implements CORBA interfaces that allow the individual DDS Participants to register for discovery and update internal state as necessary.</pre>
+</div>
 <div title="DefaultTiddlers" modifier="MikeMartinez" created="201002181950" modified="201002182002" changecount="2">
 <pre>[[OpenDDS-Bench]]</pre>
+</div>
+<div title="FAQ" modifier="MikeMartinez" created="201003022001" tags="publish faq" changecount="1">
+<pre>#[[What kind of document is this?|FAQ1]]
+</pre>
+</div>
+<div title="FAQ1" modifier="MikeMartinez" created="201003022001" tags="publish faq" changecount="1">
+<pre>&quot;What kind of document is this?&quot;
+
+This is a TiddlyWIki document.</pre>
 </div>
 <div title="GettingStarted" modifier="MikeMartinez" created="201002011551" modified="201002011553" changecount="3">
 <pre>To get started with this blank [[TiddlyWiki]], you'll need to modify the following tiddlers:
@@ -546,9 +558,85 @@ If you wish to publish the contents of this document as static HTML web pages, t
 * [[StyleSheet]]: modify the reference to the logo file in the //.publishLogo// class to be in a correct relative directory path
 * use the ''publish'' selection on the right sidebar to publish all tiddlers with the ''publish'' tag to individual HTML files.  They will all be located in the //./publish// directory</pre>
 </div>
-<div title="MainMenu" modifier="MikeMartinez" created="201002181950" modified="201002182009" changecount="5">
+<div title="Installation" modifier="MikeMartinez" created="201003022306" modified="201003030018" tags="publish" changecount="20">
+<pre>Once the OpenDDS core is built, the OpenDDS-Bench software can be built.  This software is located relative to the OpenDDS root directory and is part of the OpenDDS download.  For purposes of this documentation, we assume that you have set the ~BENCH_ROOT environment variable to a value of //$~DDS_ROOT/performance-tests/Bench//.
+
+There is one additional executable that needs to be built as part of the framework.  This is the {{{testprocess}}} command.  Makefiles and solution files are provided as part of the OpenDDS download, so this can be built the same way as the core OpenDDS code.  Using gcc on Linux this could be done simply as:
+&lt;&lt;&lt;
+ shell&gt; make -C $~BENCH_ROOT
+&lt;&lt;&lt;
+
+Once the software has been built, it can be used for test execution.  It must be made available on all hosts which will be participating in the tests.  If the software has been built on each host participating, or if it is available via a network file system and executable on each participating host, then no further actions need to be taken.
+
+If there are hosts which are participating in the test and can execute the OpenDDS software built on one of the other hosts, but which to not have direct access to those build directories, then the libraries and command for testing can be transferred to these hosts.  The libraries used by the test processing include those from ACE, TAO, and OpenDDS.  The commands include the test execution script as well as the {{{testprocess}}} command and [[repository|DCPSInfoRepo]] command.  These are summarized in the table below.
+
+{{centeredTable{
+| ''Required Software for Test Execution'' |c
+| //Item// | //Location// | //Description// |
+|versioned ~DCPSInfoRepoServ library |$~DDS_ROOT/lib |OpenDDS repository implementation libraries |
+|versioned Federator library |$~DDS_ROOT/lib |~|
+|versioned ~InfoRepoLib library |$~DDS_ROOT/lib |~|
+|versioned ~OpenDDS_Dcps library |$~DDS_ROOT/lib |core OpenDDS library |
+|versioned ~SimpleTcp library |$~DDS_ROOT/lib |OpenDDS transport implementations |
+|versioned ~OpenDDS_Udp library |$~DDS_ROOT/lib |~|
+|versioned ~OpenDDS_Multicast library |$~DDS_ROOT/lib |~|
+|unversioned&lt;br&gt;~SimpleTcp library |link to versioned&lt;br&gt;~OpenDDS_SimpleTcp library |~|
+|unversioned&lt;br&gt;~OpenDDS_Udp library |link to versioned&lt;br&gt;~OpenDDS_Udp library |~|
+|unversioned&lt;br&gt;~OpenDDS_Multicast library |link to versioned&lt;br&gt;~OpenDDS_Multicast library |~|
+|versioned ACE library |$~ACE_ROOT/lib |core ACE library |
+|versioned ~TAO_AnyTypeCode library |$~ACE_ROOT/lib |core TAO libraries |
+|versioned ~TAO_ImR_Client library |$~ACE_ROOT/lib |~|
+|versioned ~TAO_IORTable library |$~ACE_ROOT/lib |~|
+|versioned ~TAO_PortableServer library |$~ACE_ROOT/lib |~|
+|versioned TAO library |$~ACE_ROOT/lib |~|
+|versioned ~TAO_Svc_Utils library |$~ACE_ROOT/lib |~|
+|versioned ~TAO_CodecFactory library |$~ACE_ROOT/lib |~|
+|versioned ~TAO_AnyTypeCode library |$~ACE_ROOT/lib |~|
+|versioned ~TAO_Codeset library |$~ACE_ROOT/lib |~|
+|versioned ~TAO_PI library |$~ACE_ROOT/lib |~|
+|unversioned&lt;br&gt;~TAO_CodecFactory library |link to versioned&lt;br&gt;~TAO_CodecFactory library |~|
+|unversioned&lt;br&gt;~TAO_AnyTypeCode library |link to versioned&lt;br&gt;~TAO_AnyTypeCode library |~|
+|unversioned&lt;br&gt;~TAO_Codeset library |link to versioned&lt;br&gt;~TAO_Codeset library |~|
+|unversioned&lt;br&gt;~TAO_PI library |link to versioned&lt;br&gt;~TAO_PI library |~|
+|~Run_Test.pm |$~DDS_ROOT/bin/~PerlDDS |core DDS perl modules |
+|~ProcessFactory.pm |$~DDS_ROOT/bin/~PerlDDS |~|
+|Process.pm |$~DDS_ROOT/bin/~PerlDDS |~|
+|~ConfigList.pm |$~ACE_ROOT/bin/~PerlACE |core ACE perl modules |
+|~Process_Unix.pm |$~ACE_ROOT/bin/~PerlACE |~|
+|~ProcessVX_Win32.pm |$~ACE_ROOT/bin/~PerlACE |~|
+|~TestTarget.pm |$~ACE_ROOT/bin/~PerlACE |~|
+|~MSProject.pm |$~ACE_ROOT/bin/~PerlACE |~|
+|~Process_VMS.pm |$~ACE_ROOT/bin/~PerlACE |~|
+|~Process_Win32.pm |$~ACE_ROOT/bin/~PerlACE |~|
+|~ProcessLVRT.pm |$~ACE_ROOT/bin/~PerlACE |~|
+|~ProcessVX.pm |$~ACE_ROOT/bin/~PerlACE |~|
+|~Run_Test.pm |$~ACE_ROOT/bin/~PerlACE |~|
+|Process.pm |$~ACE_ROOT/bin/~PerlACE |~|
+|~ProcessVX_Unix.pm |$~ACE_ROOT/bin/~PerlACE |~|
+|~TestTarget_LVRT.pm |$~ACE_ROOT/bin/~PerlACE |~|
+|~DCPSInfoRepo |$~DDS_ROOT/bin |OpenDDS repository command |
+|testprocess |$~BENCH_ROOT/bin |OpenDDS-Bench test process |
+|run_test |$~BENCH_ROOT/bin |OpenDDS-Bench test management script |
+}}}
+In addition to the software, there are configuration files that are available for pre-configured tests.  These should be available on all hosts participating in these tests.  These configuration files are listed in the table below.
+
+{{centeredTable{
+| ''Test Configuration Files'' |c
+| //Name// | //Location// | //Description// |
+|svc.conf |$~BENCH_ROOT/etc |Service configurator specifications for dynamically linked libraries.  Typically this is restricted to transport libraries and the monitor service library. |
+|transport*.ini |$~BENCH_ROOT/etc |Transport configuration specifications used by all tests. |
+|*.ini |$~BENCH_ROOT/tests/scenarios |Preconfigured scenario tests.  These are old and should be considered deprecated. |
+|~|$~BENCH_ROOT/tests/latency |Preconfigured latency tests.|
+|~|$~BENCH_ROOT/tests/scaling |Preconfigured scaling tests.|
+|~|$~BENCH_ROOT/tests/spray |Preconfigured multicast multipoint tests.|
+}}}
+
+As an aid to packaging these files into a distributable form, the $~BENCH_ROOT/tools/mkpkg script is available.  This is a bash shell script and as such can only be used directly on a host that supports the bash shell.  It can be used as a guide for other shells or host types to create a localized version if desired.
+
+The script makes copies and links in a named (default //pkg//) target directory that can then be tar'ed or zip'ed into a distributable file.  The {{{run_test}}} test management script will configure the environment of processes that it starts to find libraries and commands in the subdirectories created by this script, making use of the distribution straightforward.</pre>
+</div>
+<div title="MainMenu" modifier="MikeMartinez" created="201002181950" modified="201003022110" changecount="6">
 <pre>[[Introduction|OpenDDS-Bench]]
-[[FAQ]]
 [[Quick Start]]
 [[Installation]]
 [[Test Specification]]
@@ -557,6 +645,7 @@ If you wish to publish the contents of this document as static HTML web pages, t
 [[Data Reduction]]
 [[Data Visualization]]
 [[Submitting Results]]
+[[FAQ]]
 </pre>
 </div>
 <div title="OpenDDS" modifier="OpenDDS" created="200911302157" tags="OpenDDS" changecount="1">
@@ -564,8 +653,8 @@ If you wish to publish the contents of this document as static HTML web pages, t
 
 OpenDDS is supported by [[Object Computing, Inc.|http://www.ociweb.com/]]</pre>
 </div>
-<div title="OpenDDS-Bench" modifier="MikeMartinez" created="201002182000" modified="201002231946" tags="publish" changecount="13">
-<pre>OpenDDS-Bench is a testing framework for specifying and executing performance testing of OpenDDS.  It supports testing on one or more hosts each with one or more processes.  Any test process may contain any number of DDS service publications or subscriptions.
+<div title="OpenDDS-Bench" modifier="MikeMartinez" created="201002182000" modified="201003022006" tags="publish" changecount="19">
+<pre>OpenDDS-Bench is a testing framework for specifying and executing performance testing of OpenDDS.  It supports testing on one or more hosts; each host with one or more processes.  Any test process may contain any number of DDS service publications or subscriptions.
 
 The framework consists of:
 *executable [[test processes|Test Execution]]
@@ -575,15 +664,17 @@ The framework consists of:
 *[[data visualization|Data Visualization]] tools
 OpenDDS-Bench is included in the OpenDDS download files and is located in the //$~DDS_ROOT/performance-tests/Bench// directory.  It links the OpenDDS service libraries so should be built after OpenDDS has been successfully built.
 
-Several pre-configured tests are available for testing without needing to develop them.  These include tests for ''latency'' and ''throughput''.
+Several pre-configured tests are available for testing without needing to develop them.  These include tests for [[latency|Latency Tests]] and [[throughput|Throughput Tests]].
 
 This user guide is written assuming a minimum environment setup which includes establishing the framework root, adding the framework bin directory to the command search path, and adding the framework library directory to the library runtime search path.  This can be done easily by setting the following environment variables:
 
+{{centeredTable{
 | Variable | Value |
 |''~BENCH_ROOT'' |$~DDS_ROOT/performance-tests/Bench |
 |''PATH'' |$~BENCH_ROOT/bin:$PATH |
 |''~LD_LIBRARY_PATH'' |$~BENCH_ROOT/lib:$~LD_LIBRARY_PATH |
 | OpenDDS-Bench environment used in this document |c
+}}}
 </pre>
 </div>
 <div title="PageTemplate" modifier="OpenDDS" created="200911302019" modified="200912120004" changecount="4">
@@ -859,6 +950,52 @@ String.prototype.filenameEncode = function()
 &lt;hr&gt;%4, %5&amp;nbsp;(created %6)
 &lt;/div&gt;</pre>
 </div>
+<div title="Quick Start" modifier="MikeMartinez" created="201003022013" modified="201003022109" tags="publish" changecount="15">
+<pre>The steps to run a test using this framework are as follows:
+{{itemBlock{
+!Obtain and build ~OpenDDS and the ~OpenDDS-Bench software.
+Find the OpenDDS software, building and installation instructions at [[opendds.org|http://www.opendds.org/]].  Each host which will be participating in a test will need to have the software available.  For homogeneous hosts, that can execute software built on the same kind of host, the installation steps below show how to distribute the software.  Each host type will need to have the software built for it.  For example, if both Linux and Windows machines will be participating in the testing, then a build for each host type will need to be performed and installed on hosts of that type.
+
+Once OpenDDS and the libraries it depends on have been built, the OpenDDS-Bench software needs to be built.  On a Linux host using gcc, you can do this by:
+&lt;&lt;&lt;
+ shell&gt; cd $~BENCH_ROOT
+ shell&gt; mwc.pl -type gnuace
+ shell&gt; make
+&lt;&lt;&lt;
+}}}
+{{itemBlock{
+!Install the ~OpenDDS-Bench performance testing framework on all hosts involved with the test.
+Once the OpenDDS and OpenDDS-Bench software has been built, it needs to be made available on each host participating in the testing.  There is a helper script located in //$~BENCH_ROOT/tools// to simplify this process for tests that execute on homogenous systems.  This can be done by following these steps:
+&lt;&lt;&lt;
+ shell&gt; cd $~BENCH_ROOT
+ shell&gt; tools/mkpkg bench
+ shell&gt; tar jcf bench.tar.bz2 bench
+ shell&gt; cp bench.tar.bz2 &lt;dest&gt;
+&lt;&lt;&lt;
+Where ''&lt;dest&gt;'' is the destination directory where the tarfile will be uncompressed and the tests will be executed from.  Use the ''scp'' command to transfer the tarfile between hosts if the disks are not available directly.  It is not required but recommended to have a separate destination directory for each host in the test.  It is best if the directories where the test processes will execute are local to the machine which will be executing the processes.
+Once the tarfile has been distributed, unpack it and create a directory for executing the testing on each participating host.  Save the base directory of the distributed software as a shell variable to simplify test execution later.
+&lt;&lt;&lt;
+ shell&gt; cd &lt;dest&gt;
+ shell&gt; tar xf bench.tar.bz2
+ shell&gt; export $BASEDIR=`pwd`/bench
+&lt;&lt;&lt;
+}}}
+{{itemBlock{
+!Start the testing on each host.
+Once the test software is available on each host participating in the test, the test can be executed.  A separate directory for each host is recommended to avoid inadvertently colliding output.
+The [[repository|DCPSInfoRepo]] needs to be started on one host prior to starting any {{{testprocess}}} executables.  The ''&lt;host&gt;'' and ''&lt;port&gt;'' are where the repository will listen for CORBA connection requests from the participating processes.
+&lt;&lt;&lt;
+ shell&gt; $BASEDIR/bin/run_test -S -h iiop:&quot;&quot;&quot;//&quot;&quot;&quot;&lt;host&gt;:&lt;port&gt;
+&lt;&lt;&lt;
+The following steps need to be performed on each host.  The ''&lt;host&gt;'' and ''&lt;port&gt;'' should refer to the location where the repository is listening and should be reachable from the current host.  The ''&lt;transportconfig&gt;'' file specifies the transport configuration information, and the ''&lt;testconfig&gt;'' file contains the [[test specification|Test Specification]] information.
+&lt;&lt;&lt;
+ shell&gt; mkdir -p &lt;testdir&gt;
+ shell&gt; cd &lt;testdir&gt;
+ shell&gt; $BASEDIR/bin/run_test -P -h &lt;host&gt;:&lt;port&gt; -i &lt;transportconfig&gt; -s &lt;testconfig&gt; 
+&lt;&lt;&lt;
+Note that it is important to start the tests within 60 seconds of each other.  This is due to the script timeout value, which is set to 60 seconds after the specified duration.  The test execution does not start until the entire test is connected, so if any host is not started within the 60 seconds interval, it is possible that the processes started first will start timing out before the test is complete.
+}}}</pre>
+</div>
 <div title="RunTestManPage" modifier="MikeMartinez" created="201002251721" modified="201002251724" changecount="2">
 <pre>&lt;html&gt;
 &lt;head&gt;
@@ -1118,7 +1255,7 @@ by adding the test library to the runtime library search path.&lt;/p&gt;
 <div title="SiteUrl" modifier="OpenDDS" created="200911302027" changecount="1">
 <pre>http://www.ociweb.com/</pre>
 </div>
-<div title="StyleSheet" modifier="MikeMartinez" created="200911302014" modified="201002011554" changecount="67">
+<div title="StyleSheet" modifier="MikeMartinez" created="200911302014" modified="201003021959" changecount="76">
 <pre>a:hover {
     text-decoration: none;
 }
@@ -1160,6 +1297,31 @@ by adding the test library to the runtime library search path.&lt;/p&gt;
 
 .siteTitle {
     font-weight: bold;
+}
+
+.itemBlock {
+  display: block;
+  text-align: left;
+  margin-left: 30px;
+  margin-right: auto;
+  padding: 5px;
+  border: solid 1px;
+}
+
+.viewer div.centeredTable {
+	text-align: center;
+}
+
+.viewer div.centeredTable table {
+	margin: 0 auto;
+	text-align: left;
+}
+
+.imgcenter {
+  display: block;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #mainMenu {
@@ -1314,8 +1476,48 @@ h2,h3 {border-bottom:1px solid [[ColorPalette::TertiaryLight]];}
 #backstageCloak {background:[[ColorPalette::Foreground]]; opacity:0.6; filter:'alpha(opacity=60)';}
 /*}}}*/</pre>
 </div>
-<div title="Test Execution" modifier="MikeMartinez" created="201002221632" modified="201002251720" tags="publish" changecount="9">
-<pre>Test execution using the OpenDDS-Bench framework is managed through the use of a single Perl script.  This script is located in $~BENCH_ROOT/bin/run_test.  It has many options which are enumerated by executing the script with either the '-?' or the '[[--man|RunTestManPage]]' command line arguments.  The '[[--man|RunTestManPage]]' argument will provide a more detailed explanation of the available options.</pre>
+<div title="Test Execution" modifier="MikeMartinez" created="201002221632" modified="201003021950" tags="publish" changecount="31">
+<pre>Test execution using the framework involves a test script to manage the processing on each host involved in the testing, the OpenDDS [[repository|DCPSInfoRepo]] process, and a test process that creates the OpenDDS service Entities and executes the actual test operations.
+
+{{itemBlock{
+!run_test
+Test execution using the OpenDDS-Bench framework is managed through the use of a single Perl script.  This script is located in //$~BENCH_ROOT/bin/run_test//.  It has many [[options|RunTestManPage]] which are enumerated by executing the script with either the '-?' or the '-&amp;nbsp;-man' command line arguments.
+
+The {{{run_test}}} script will start either the {{{DCPSInfoRepo}}} [[repository|DCPSInfoRepo]] process or any number of {{{testprocess}}} test executables.  Each test executable is configured via files to create and enable a number of publications and subscriptions for the test.  The details of [[test specification|Test Specification]] include the publication and subscription ~QoS policy values and test management parameters as well as those for associated Entities of the Topic and Participant and test support for transports.  Each {{{testprocess}}} will be started with a separate test configuration file, but each process started by a single script will use the same transport configuration file.
+}}}
+
+{{itemBlock{
+!~DCPSInfoRepo
+Typically one or more test processes are started on each host involved with a test.  The {{{DCSPInfoRepo}}} [[repository|DCPSInfoRepo]] process can be established on one of the test hosts or a different host not involved with the test but reachable by all test hosts.  Since the repository is involved only during test startup and shutdown it is usually not necessary to dedicate a host for its execution.
+}}}
+
+{{itemBlock{
+!testprocess
+The {{{testprocess}}} test executable is what reads the configuration files, creates and manages the OpenDDS Entities and executes the test.  Each process in the test is configured separately and managed by the {{{run_test}}} script.  Normal usage will have a single {{{run_test}}} script on each host start as many {{{testprocess}}} processes as the test requires on that host.  The {{{testprocess}}} executable is passed options from the {{{run_test}}} script, so it is not required for users to directly specify the command line arguments to this executable.  The executable accepts the following options:
+{{indent{
+; ''-v''
+: be verbose when executing
+; ''-d &lt;duration&gt;''
+: execute for at least {{{duration}}} seconds
+; ''-f &lt;file&gt;''
+: use ''&lt;file&gt;'' as the test specification file for this execution.
+; ''-t &lt;type&gt;''
+: save the specified data when collecting timing statistics.  ''&lt;type&gt;'' is one of: ''unbounded'', ''newest'', or ''oldest''.
+//this is deprecated in favor of the configuration file specification for the same parameter//
+; ''-s &lt;size&gt;''
+: gather the specified amount of timing data.
+//this is deprecated in favor of the configuration file specification for the same parameter//
+; ''-r &lt;file&gt;''
+: place the gathered timing data into the specified file.
+//this is deprecated in favor of the configuration file specification for the same parameter//
+}}}
+}}}
+</pre>
+</div>
+<div title="TiddlyWIki" modifier="MikeMartinez" created="201003022002" changecount="1">
+<pre>~TiddlyWiki is a complete [[wiki|http://en.wikipedia.org/wiki/Wiki]] in a single HTML file. It contains the entire text of the wiki, and all the ~JavaScript, CSS and HTML goodness to be able to display it, and let you edit it or search it. Without needing a server.
+
+You can find out more at the [[TiddlyWiki home|http://www.tiddlywiki.com/]].</pre>
 </div>
 </div>
 <!--POST-STOREAREA-->
